emotionscript.output
Terminals unused in grammar

   FUNC_END
   COND_SWITCH
   COND_DEFAULT
   FSM_WHEN
   CLASS_END
   CLASS_BODY
   CLASS_PUBLIC
   CLASS_PROTECTED


Grammar

    0 $accept: program $end

    1 program: PROGRAM_MIND IDENTIFIER PROGRAM_AWAKE program_body PROGRAM_SLEEP

    2 program_body: /* empty */
    3             | statement_list

    4 statement_list: statement
    5               | statement_list statement

    6 statement: declaration_stmt
    7          | assignment_stmt
    8          | expression_stmt
    9          | function_declaration
   10          | conditional_stmt
   11          | loop_stmt
   12          | io_stmt
   13          | control_flow_stmt
   14          | persona_declaration
   15          | fsm_declaration
   16          | emotion_based_stmt
   17          | PROGRAM_ABORT DELIM_SEMICOLON
   18          | PROGRAM_SCENE IDENTIFIER DELIM_SEMICOLON
   19          | error DELIM_SEMICOLON

   20 declaration_stmt: type_specifier IDENTIFIER DELIM_SEMICOLON
   21                 | variable_modifier type_specifier IDENTIFIER DELIM_SEMICOLON
   22                 | type_specifier IDENTIFIER OP_ARROW expression DELIM_SEMICOLON

   23 type_specifier: TYPE_COUNT
   24               | TYPE_MEASURE
   25               | TYPE_TRUTH
   26               | TYPE_WORDS
   27               | TYPE_LEVEL

   28 variable_modifier: VAR_THOUGHT
   29                  | VAR_MEMORY
   30                  | VAR_TRAIT
   31                  | VAR_STATE

   32 assignment_stmt: ASSIGN_SET IDENTIFIER OP_ARROW expression DELIM_SEMICOLON
   33                | ASSIGN_SET IDENTIFIER DELIM_DOT IDENTIFIER OP_ARROW expression DELIM_SEMICOLON

   34 expression_stmt: expression DELIM_SEMICOLON

   35 expression: primary_expression
   36           | expression OP_POWER expression
   37           | expression OP_MUL expression
   38           | expression OP_DIV expression
   39           | expression OP_MOD expression
   40           | expression OP_PLUS expression
   41           | expression OP_MINUS expression
   42           | expression OP_EQ expression
   43           | expression OP_NEQ expression
   44           | expression OP_LT expression
   45           | expression OP_GT expression
   46           | expression OP_LEQ expression
   47           | expression OP_GEQ expression
   48           | OP_INC IDENTIFIER
   49           | OP_DEC IDENTIFIER

   50 primary_expression: IDENTIFIER
   51                   | IDENTIFIER OP_INC
   52                   | IDENTIFIER OP_DEC
   53                   | IDENTIFIER DELIM_DOT IDENTIFIER
   54                   | IDENTIFIER DELIM_LPAREN argument_list DELIM_RPAREN
   55                   | IDENTIFIER DELIM_LPAREN DELIM_RPAREN
   56                   | FUNC_CALL IDENTIFIER DELIM_LPAREN argument_list DELIM_RPAREN
   57                   | FUNC_CALL IDENTIFIER DELIM_LPAREN DELIM_RPAREN
   58                   | LIT_INT
   59                   | LIT_FLOAT
   60                   | LIT_STRING
   61                   | LIT_BOOL
   62                   | DELIM_LPAREN expression DELIM_RPAREN
   63                   | math_function
   64                   | FSM_CURRENT

   65 function_declaration: FUNC_DECLARE IDENTIFIER DELIM_LPAREN parameter_list DELIM_RPAREN FUNC_RETURNS type_specifier DELIM_LSHIFT function_body DELIM_RSHIFT
   66                     | FUNC_DECLARE IDENTIFIER DELIM_LPAREN DELIM_RPAREN FUNC_RETURNS type_specifier DELIM_LSHIFT function_body DELIM_RSHIFT

   67 parameter_list: parameter
   68               | parameter_list DELIM_COMMA parameter

   69 parameter: type_specifier IDENTIFIER

   70 function_body: statement_list
   71              | statement_list FUNC_RETURN expression DELIM_SEMICOLON
   72              | FUNC_RETURN expression DELIM_SEMICOLON

   73 argument_list: expression
   74              | argument_list DELIM_COMMA expression

   75 math_function: MATH_SIN DELIM_LPAREN expression DELIM_RPAREN
   76              | MATH_COS DELIM_LPAREN expression DELIM_RPAREN
   77              | MATH_TAN DELIM_LPAREN expression DELIM_RPAREN
   78              | MATH_ASIN DELIM_LPAREN expression DELIM_RPAREN
   79              | MATH_ACOS DELIM_LPAREN expression DELIM_RPAREN
   80              | MATH_ATAN DELIM_LPAREN expression DELIM_RPAREN
   81              | MATH_ABS DELIM_LPAREN expression DELIM_RPAREN
   82              | MATH_SQRT DELIM_LPAREN expression DELIM_RPAREN
   83              | MATH_CEIL DELIM_LPAREN expression DELIM_RPAREN
   84              | MATH_FLOOR DELIM_LPAREN expression DELIM_RPAREN
   85              | MATH_NORM DELIM_LPAREN expression DELIM_RPAREN
   86              | MATH_POW DELIM_LPAREN expression DELIM_COMMA expression DELIM_RPAREN
   87              | MATH_DIFF DELIM_LPAREN expression DELIM_COMMA expression DELIM_RPAREN

   88 conditional_stmt: COND_IF condition statement_list COND_END
   89                 | COND_IF condition statement_list else_if_chain COND_END
   90                 | COND_IF condition statement_list COND_ELSE statement_list COND_END
   91                 | COND_IF condition statement_list else_if_chain COND_ELSE statement_list COND_END
   92                 | switch_stmt
   93                 | new_switch_stmt

   94 condition: expression

   95 else_if_chain: COND_ELSE_IF condition statement_list
   96              | else_if_chain COND_ELSE_IF condition statement_list

   97 switch_stmt: DECIDE_KW DELIM_LPAREN expression DELIM_RPAREN DELIM_LBRACE switch_body DELIM_RBRACE

   98 switch_body: switch_body_item
   99            | switch_body switch_body_item

  100 switch_body_item: expression DELIM_COLON
  101                 | OTHERWISE_KW DELIM_COLON
  102                 | statement

  103 new_switch_stmt: DECIDE_KW expression new_case_blocks END_DECISION_KW DELIM_DOT

  104 new_case_blocks: new_case_block
  105                | new_case_blocks new_case_block
  106                | new_case_blocks new_default_block

  107 new_case_block: WHEN_KW expression statement_list

  108 new_default_block: OTHERWISE_KW statement_list

  109 loop_stmt: LOOP_WHILE condition statement_list LOOP_END
  110          | LOOP_FOR DELIM_LPAREN assignment_stmt expression DELIM_SEMICOLON expression DELIM_RPAREN statement_list LOOP_END
  111          | new_while_stmt

  112 new_while_stmt: WHILE_FEELING_KW DELIM_LPAREN condition DELIM_RPAREN statement_list CALM_KW

  113 control_flow_stmt: LOOP_BREAK DELIM_SEMICOLON
  114                  | LOOP_CONTINUE DELIM_SEMICOLON

  115 io_stmt: IO_SPEAK DELIM_LPAREN expression DELIM_RPAREN DELIM_SEMICOLON
  116        | IO_LISTEN DELIM_LPAREN IDENTIFIER DELIM_RPAREN DELIM_SEMICOLON
  117        | IO_ALERT DELIM_LPAREN expression DELIM_RPAREN DELIM_SEMICOLON

  118 persona_declaration: CLASS_PERSONA IDENTIFIER DELIM_LSHIFT persona_body DELIM_RSHIFT
  119                    | CLASS_PERSONA IDENTIFIER CLASS_INHERIT IDENTIFIER DELIM_LSHIFT persona_body DELIM_RSHIFT

  120 persona_body: /* empty */
  121             | persona_member_list

  122 persona_member_list: persona_member
  123                    | persona_member_list persona_member

  124 persona_member: access_modifier variable_modifier type_specifier IDENTIFIER DELIM_SEMICOLON
  125               | access_modifier type_specifier IDENTIFIER DELIM_SEMICOLON
  126               | variable_modifier type_specifier IDENTIFIER DELIM_SEMICOLON
  127               | type_specifier IDENTIFIER DELIM_SEMICOLON
  128               | access_modifier function_declaration
  129               | function_declaration
  130               | CLASS_OVERRIDE function_declaration
  131               | CLASS_STATIC type_specifier IDENTIFIER DELIM_SEMICOLON

  132 access_modifier: CLASS_OPEN
  133                | CLASS_GUARDED
  134                | CLASS_HIDDEN

  135 fsm_declaration: FSM_TRANSITION IDENTIFIER WHEN_KW condition DELIM_SEMICOLON
  136                | FSM_EVENT IDENTIFIER DELIM_LPAREN DELIM_RPAREN DELIM_LBRACE statement_list DELIM_RBRACE
  137                | FSM_EVENT IDENTIFIER DELIM_LPAREN DELIM_RPAREN DELIM_LSHIFT statement_list DELIM_RSHIFT

  138 emotion_based_stmt: TYPE_EMOTION IDENTIFIER DELIM_SEMICOLON
  139                   | TYPE_EMOTION IDENTIFIER OP_ARROW expression DELIM_SEMICOLON
  140                   | TYPE_EMOTION IDENTIFIER FSM_STATES DELIM_LBRACE state_list DELIM_RBRACE DELIM_SEMICOLON

  141 state_list: IDENTIFIER
  142           | state_list DELIM_COMMA IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256) 19
PROGRAM_MIND (258) 1
PROGRAM_AWAKE (259) 1
PROGRAM_SLEEP (260) 1
PROGRAM_ABORT (261) 17
PROGRAM_SCENE (262) 18
TYPE_COUNT (263) 23
TYPE_MEASURE (264) 24
TYPE_TRUTH (265) 25
TYPE_WORDS (266) 26
TYPE_EMOTION (267) 138 139 140
TYPE_LEVEL (268) 27
VAR_THOUGHT (269) 28
VAR_MEMORY (270) 29
VAR_TRAIT (271) 30
VAR_STATE (272) 31
ASSIGN_SET (273) 32 33
IO_SPEAK (274) 115
IO_LISTEN (275) 116
IO_ALERT (276) 117
FUNC_DECLARE (277) 65 66
FUNC_END (278)
FUNC_RETURNS (279) 65 66
FUNC_RETURN (280) 71 72
FUNC_CALL (281) 56 57
COND_IF (282) 88 89 90 91
COND_ELSE_IF (283) 95 96
COND_ELSE (284) 90 91
COND_END (285) 88 89 90 91
COND_SWITCH (286)
COND_DEFAULT (287)
DECIDE_KW (288) 97 103
WHEN_KW (289) 107 135
OTHERWISE_KW (290) 101 108
END_DECISION_KW (291) 103
LOOP_WHILE (292) 109
LOOP_END (293) 109 110
LOOP_FOR (294) 110
LOOP_BREAK (295) 113
LOOP_CONTINUE (296) 114
WHILE_FEELING_KW (297) 112
CALM_KW (298) 112
FSM_STATES (299) 140
FSM_EVENT (300) 136 137
FSM_CURRENT (301) 64
FSM_TRANSITION (302) 135
FSM_WHEN (303)
CLASS_PERSONA (304) 118 119
CLASS_END (305)
CLASS_BODY (306)
CLASS_PUBLIC (307)
CLASS_PROTECTED (308)
CLASS_STATIC (309) 131
CLASS_INHERIT (310) 119
CLASS_OVERRIDE (311) 130
CLASS_OPEN (312) 132
CLASS_GUARDED (313) 133
CLASS_HIDDEN (314) 134
DELIM_LSHIFT (315) 65 66 118 119 137
DELIM_RSHIFT (316) 65 66 118 119 137
MATH_ABS (317) 81
MATH_SQRT (318) 82
MATH_CEIL (319) 83
MATH_FLOOR (320) 84
MATH_DIFF (321) 87
MATH_NORM (322) 85
MATH_POW (323) 86
MATH_SIN (324) 75
MATH_COS (325) 76
MATH_TAN (326) 77
MATH_ASIN (327) 78
MATH_ACOS (328) 79
MATH_ATAN (329) 80
OP_ARROW (330) 22 32 33 139
OP_EQ (331) 42
OP_NEQ (332) 43
OP_LEQ (333) 46
OP_GEQ (334) 47
OP_LT (335) 44
OP_GT (336) 45
OP_INC (337) 48 51
OP_DEC (338) 49 52
OP_PLUS (339) 40
OP_MINUS (340) 41
OP_MUL (341) 37
OP_DIV (342) 38
OP_MOD (343) 39
OP_POWER (344) 36
DELIM_LPAREN (345) 54 55 56 57 62 65 66 75 76 77 78 79 80 81 82 83
    84 85 86 87 97 110 112 115 116 117 136 137
DELIM_RPAREN (346) 54 55 56 57 62 65 66 75 76 77 78 79 80 81 82 83
    84 85 86 87 97 110 112 115 116 117 136 137
DELIM_LBRACE (347) 97 136 140
DELIM_RBRACE (348) 97 136 140
DELIM_SEMICOLON (349) 17 18 19 20 21 22 32 33 34 71 72 110 113 114
    115 116 117 124 125 126 127 131 135 138 139 140
DELIM_COMMA (350) 68 74 86 87 142
DELIM_COLON (351) 100 101
DELIM_DOT (352) 33 53 103
LIT_STRING (353) 60
LIT_INT (354) 58
LIT_FLOAT (355) 59
LIT_BOOL (356) 61
IDENTIFIER (357) 1 18 20 21 22 32 33 48 49 50 51 52 53 54 55 56 57
    65 66 69 116 118 119 124 125 126 127 131 135 136 137 138 139 140
    141 142
BARE_ID (358)


Nonterminals, with rules where they appear

$accept (104)
    on left: 0
program (105)
    on left: 1, on right: 0
program_body (106)
    on left: 2 3, on right: 1
statement_list (107)
    on left: 4 5, on right: 3 5 70 71 88 89 90 91 95 96 107 108 109
    110 112 136 137
statement (108)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19, on right: 4 5 102
declaration_stmt (109)
    on left: 20 21 22, on right: 6
type_specifier (110)
    on left: 23 24 25 26 27, on right: 20 21 22 65 66 69 124 125 126
    127 131
variable_modifier (111)
    on left: 28 29 30 31, on right: 21 124 126
assignment_stmt (112)
    on left: 32 33, on right: 7 110
expression_stmt (113)
    on left: 34, on right: 8
expression (114)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49, on right:
    22 32 33 34 36 37 38 39 40 41 42 43 44 45 46 47 62 71 72 73 74
    75 76 77 78 79 80 81 82 83 84 85 86 87 94 97 100 103 107 110 115
    117 139
primary_expression (115)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64, on right:
    35
function_declaration (116)
    on left: 65 66, on right: 9 128 129 130
parameter_list (117)
    on left: 67 68, on right: 65 68
parameter (118)
    on left: 69, on right: 67 68
function_body (119)
    on left: 70 71 72, on right: 65 66
argument_list (120)
    on left: 73 74, on right: 54 56 74
math_function (121)
    on left: 75 76 77 78 79 80 81 82 83 84 85 86 87, on right: 63
conditional_stmt (122)
    on left: 88 89 90 91 92 93, on right: 10
condition (123)
    on left: 94, on right: 88 89 90 91 95 96 109 112 135
else_if_chain (124)
    on left: 95 96, on right: 89 91 96
switch_stmt (125)
    on left: 97, on right: 92
switch_body (126)
    on left: 98 99, on right: 97 99
switch_body_item (127)
    on left: 100 101 102, on right: 98 99
new_switch_stmt (128)
    on left: 103, on right: 93
new_case_blocks (129)
    on left: 104 105 106, on right: 103 105 106
new_case_block (130)
    on left: 107, on right: 104 105
new_default_block (131)
    on left: 108, on right: 106
loop_stmt (132)
    on left: 109 110 111, on right: 11
new_while_stmt (133)
    on left: 112, on right: 111
control_flow_stmt (134)
    on left: 113 114, on right: 13
io_stmt (135)
    on left: 115 116 117, on right: 12
persona_declaration (136)
    on left: 118 119, on right: 14
persona_body (137)
    on left: 120 121, on right: 118 119
persona_member_list (138)
    on left: 122 123, on right: 121 123
persona_member (139)
    on left: 124 125 126 127 128 129 130 131, on right: 122 123
access_modifier (140)
    on left: 132 133 134, on right: 124 125 128
fsm_declaration (141)
    on left: 135 136 137, on right: 15
emotion_based_stmt (142)
    on left: 138 139 140, on right: 16
state_list (143)
    on left: 141 142, on right: 140 142


state 0

    0 $accept: . program $end

    PROGRAM_MIND  shift, and go to state 1

    program  go to state 2


state 1

    1 program: PROGRAM_MIND . IDENTIFIER PROGRAM_AWAKE program_body PROGRAM_SLEEP

    IDENTIFIER  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: PROGRAM_MIND IDENTIFIER . PROGRAM_AWAKE program_body PROGRAM_SLEEP

    PROGRAM_AWAKE  shift, and go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    1 program: PROGRAM_MIND IDENTIFIER PROGRAM_AWAKE . program_body PROGRAM_SLEEP

    error             shift, and go to state 6
    PROGRAM_ABORT     shift, and go to state 7
    PROGRAM_SCENE     shift, and go to state 8
    TYPE_COUNT        shift, and go to state 9
    TYPE_MEASURE      shift, and go to state 10
    TYPE_TRUTH        shift, and go to state 11
    TYPE_WORDS        shift, and go to state 12
    TYPE_EMOTION      shift, and go to state 13
    TYPE_LEVEL        shift, and go to state 14
    VAR_THOUGHT       shift, and go to state 15
    VAR_MEMORY        shift, and go to state 16
    VAR_TRAIT         shift, and go to state 17
    VAR_STATE         shift, and go to state 18
    ASSIGN_SET        shift, and go to state 19
    IO_SPEAK          shift, and go to state 20
    IO_LISTEN         shift, and go to state 21
    IO_ALERT          shift, and go to state 22
    FUNC_DECLARE      shift, and go to state 23
    FUNC_CALL         shift, and go to state 24
    COND_IF           shift, and go to state 25
    DECIDE_KW         shift, and go to state 26
    LOOP_WHILE        shift, and go to state 27
    LOOP_FOR          shift, and go to state 28
    LOOP_BREAK        shift, and go to state 29
    LOOP_CONTINUE     shift, and go to state 30
    WHILE_FEELING_KW  shift, and go to state 31
    FSM_EVENT         shift, and go to state 32
    FSM_CURRENT       shift, and go to state 33
    FSM_TRANSITION    shift, and go to state 34
    CLASS_PERSONA     shift, and go to state 35
    MATH_ABS          shift, and go to state 36
    MATH_SQRT         shift, and go to state 37
    MATH_CEIL         shift, and go to state 38
    MATH_FLOOR        shift, and go to state 39
    MATH_DIFF         shift, and go to state 40
    MATH_NORM         shift, and go to state 41
    MATH_POW          shift, and go to state 42
    MATH_SIN          shift, and go to state 43
    MATH_COS          shift, and go to state 44
    MATH_TAN          shift, and go to state 45
    MATH_ASIN         shift, and go to state 46
    MATH_ACOS         shift, and go to state 47
    MATH_ATAN         shift, and go to state 48
    OP_INC            shift, and go to state 49
    OP_DEC            shift, and go to state 50
    DELIM_LPAREN      shift, and go to state 51
    LIT_STRING        shift, and go to state 52
    LIT_INT           shift, and go to state 53
    LIT_FLOAT         shift, and go to state 54
    LIT_BOOL          shift, and go to state 55
    IDENTIFIER        shift, and go to state 56

    PROGRAM_SLEEP  reduce using rule 2 (program_body)

    program_body          go to state 57
    statement_list        go to state 58
    statement             go to state 59
    declaration_stmt      go to state 60
    type_specifier        go to state 61
    variable_modifier     go to state 62
    assignment_stmt       go to state 63
    expression_stmt       go to state 64
    expression            go to state 65
    primary_expression    go to state 66
    function_declaration  go to state 67
    math_function         go to state 68
    conditional_stmt      go to state 69
    switch_stmt           go to state 70
    new_switch_stmt       go to state 71
    loop_stmt             go to state 72
    new_while_stmt        go to state 73
    control_flow_stmt     go to state 74
    io_stmt               go to state 75
    persona_declaration   go to state 76
    fsm_declaration       go to state 77
    emotion_based_stmt    go to state 78


state 6

   19 statement: error . DELIM_SEMICOLON

    DELIM_SEMICOLON  shift, and go to state 79


state 7

   17 statement: PROGRAM_ABORT . DELIM_SEMICOLON

    DELIM_SEMICOLON  shift, and go to state 80


state 8

   18 statement: PROGRAM_SCENE . IDENTIFIER DELIM_SEMICOLON

    IDENTIFIER  shift, and go to state 81


state 9

   23 type_specifier: TYPE_COUNT .

    $default  reduce using rule 23 (type_specifier)


state 10

   24 type_specifier: TYPE_MEASURE .

    $default  reduce using rule 24 (type_specifier)


state 11

   25 type_specifier: TYPE_TRUTH .

    $default  reduce using rule 25 (type_specifier)


state 12

   26 type_specifier: TYPE_WORDS .

    $default  reduce using rule 26 (type_specifier)


state 13

  138 emotion_based_stmt: TYPE_EMOTION . IDENTIFIER DELIM_SEMICOLON
  139                   | TYPE_EMOTION . IDENTIFIER OP_ARROW expression DELIM_SEMICOLON
  140                   | TYPE_EMOTION . IDENTIFIER FSM_STATES DELIM_LBRACE state_list DELIM_RBRACE DELIM_SEMICOLON

    IDENTIFIER  shift, and go to state 82


state 14

   27 type_specifier: TYPE_LEVEL .

    $default  reduce using rule 27 (type_specifier)


state 15

   28 variable_modifier: VAR_THOUGHT .

    $default  reduce using rule 28 (variable_modifier)


state 16

   29 variable_modifier: VAR_MEMORY .

    $default  reduce using rule 29 (variable_modifier)


state 17

   30 variable_modifier: VAR_TRAIT .

    $default  reduce using rule 30 (variable_modifier)


state 18

   31 variable_modifier: VAR_STATE .

    $default  reduce using rule 31 (variable_modifier)


state 19

   32 assignment_stmt: ASSIGN_SET . IDENTIFIER OP_ARROW expression DELIM_SEMICOLON
   33                | ASSIGN_SET . IDENTIFIER DELIM_DOT IDENTIFIER OP_ARROW expression DELIM_SEMICOLON

    IDENTIFIER  shift, and go to state 83


state 20

  115 io_stmt: IO_SPEAK . DELIM_LPAREN expression DELIM_RPAREN DELIM_SEMICOLON

    DELIM_LPAREN  shift, and go to state 84


state 21

  116 io_stmt: IO_LISTEN . DELIM_LPAREN IDENTIFIER DELIM_RPAREN DELIM_SEMICOLON

    DELIM_LPAREN  shift, and go to state 85


state 22

  117 io_stmt: IO_ALERT . DELIM_LPAREN expression DELIM_RPAREN DELIM_SEMICOLON

    DELIM_LPAREN  shift, and go to state 86


state 23

   65 function_declaration: FUNC_DECLARE . IDENTIFIER DELIM_LPAREN parameter_list DELIM_RPAREN FUNC_RETURNS type_specifier DELIM_LSHIFT function_body DELIM_RSHIFT
   66                     | FUNC_DECLARE . IDENTIFIER DELIM_LPAREN DELIM_RPAREN FUNC_RETURNS type_specifier DELIM_LSHIFT function_body DELIM_RSHIFT

    IDENTIFIER  shift, and go to state 87


state 24

   56 primary_expression: FUNC_CALL . IDENTIFIER DELIM_LPAREN argument_list DELIM_RPAREN
   57                   | FUNC_CALL . IDENTIFIER DELIM_LPAREN DELIM_RPAREN

    IDENTIFIER  shift, and go to state 88


state 25

   88 conditional_stmt: COND_IF . condition statement_list COND_END
   89                 | COND_IF . condition statement_list else_if_chain COND_END
   90                 | COND_IF . condition statement_list COND_ELSE statement_list COND_END
   91                 | COND_IF . condition statement_list else_if_chain COND_ELSE statement_list COND_END

    FUNC_CALL     shift, and go to state 24
    FSM_CURRENT   shift, and go to state 33
    MATH_ABS      shift, and go to state 36
    MATH_SQRT     shift, and go to state 37
    MATH_CEIL     shift, and go to state 38
    MATH_FLOOR    shift, and go to state 39
    MATH_DIFF     shift, and go to state 40
    MATH_NORM     shift, and go to state 41
    MATH_POW      shift, and go to state 42
    MATH_SIN      shift, and go to state 43
    MATH_COS      shift, and go to state 44
    MATH_TAN      shift, and go to state 45
    MATH_ASIN     shift, and go to state 46
    MATH_ACOS     shift, and go to state 47
    MATH_ATAN     shift, and go to state 48
    OP_INC        shift, and go to state 49
    OP_DEC        shift, and go to state 50
    DELIM_LPAREN  shift, and go to state 51
    LIT_STRING    shift, and go to state 52
    LIT_INT       shift, and go to state 53
    LIT_FLOAT     shift, and go to state 54
    LIT_BOOL      shift, and go to state 55
    IDENTIFIER    shift, and go to state 56

    expression          go to state 89
    primary_expression  go to state 66
    math_function       go to state 68
    condition           go to state 90


state 26

   97 switch_stmt: DECIDE_KW . DELIM_LPAREN expression DELIM_RPAREN DELIM_LBRACE switch_body DELIM_RBRACE
  103 new_switch_stmt: DECIDE_KW . expression new_case_blocks END_DECISION_KW DELIM_DOT

    FUNC_CALL     shift, and go to state 24
    FSM_CURRENT   shift, and go to state 33
    MATH_ABS      shift, and go to state 36
    MATH_SQRT     shift, and go to state 37
    MATH_CEIL     shift, and go to state 38
    MATH_FLOOR    shift, and go to state 39
    MATH_DIFF     shift, and go to state 40
    MATH_NORM     shift, and go to state 41
    MATH_POW      shift, and go to state 42
    MATH_SIN      shift, and go to state 43
    MATH_COS      shift, and go to state 44
    MATH_TAN      shift, and go to state 45
    MATH_ASIN     shift, and go to state 46
    MATH_ACOS     shift, and go to state 47
    MATH_ATAN     shift, and go to state 48
    OP_INC        shift, and go to state 49
    OP_DEC        shift, and go to state 50
    DELIM_LPAREN  shift, and go to state 91
    LIT_STRING    shift, and go to state 52
    LIT_INT       shift, and go to state 53
    LIT_FLOAT     shift, and go to state 54
    LIT_BOOL      shift, and go to state 55
    IDENTIFIER    shift, and go to state 56

    expression          go to state 92
    primary_expression  go to state 66
    math_function       go to state 68


state 27

  109 loop_stmt: LOOP_WHILE . condition statement_list LOOP_END

    FUNC_CALL     shift, and go to state 24
    FSM_CURRENT   shift, and go to state 33
    MATH_ABS      shift, and go to state 36
    MATH_SQRT     shift, and go to state 37
    MATH_CEIL     shift, and go to state 38
    MATH_FLOOR    shift, and go to state 39
    MATH_DIFF     shift, and go to state 40
    MATH_NORM     shift, and go to state 41
    MATH_POW      shift, and go to state 42
    MATH_SIN      shift, and go to state 43
    MATH_COS      shift, and go to state 44
    MATH_TAN      shift, and go to state 45
    MATH_ASIN     shift, and go to state 46
    MATH_ACOS     shift, and go to state 47
    MATH_ATAN     shift, and go to state 48
    OP_INC        shift, and go to state 49
    OP_DEC        shift, and go to state 50
    DELIM_LPAREN  shift, and go to state 51
    LIT_STRING    shift, and go to state 52
    LIT_INT       shift, and go to state 53
    LIT_FLOAT     shift, and go to state 54
    LIT_BOOL      shift, and go to state 55
    IDENTIFIER    shift, and go to state 56

    expression          go to state 89
    primary_expression  go to state 66
    math_function       go to state 68
    condition           go to state 93


state 28

  110 loop_stmt: LOOP_FOR . DELIM_LPAREN assignment_stmt expression DELIM_SEMICOLON expression DELIM_RPAREN statement_list LOOP_END

    DELIM_LPAREN  shift, and go to state 94


state 29

  113 control_flow_stmt: LOOP_BREAK . DELIM_SEMICOLON

    DELIM_SEMICOLON  shift, and go to state 95


state 30

  114 control_flow_stmt: LOOP_CONTINUE . DELIM_SEMICOLON

    DELIM_SEMICOLON  shift, and go to state 96


state 31

  112 new_while_stmt: WHILE_FEELING_KW . DELIM_LPAREN condition DELIM_RPAREN statement_list CALM_KW

    DELIM_LPAREN  shift, and go to state 97


state 32

  136 fsm_declaration: FSM_EVENT . IDENTIFIER DELIM_LPAREN DELIM_RPAREN DELIM_LBRACE statement_list DELIM_RBRACE
  137                | FSM_EVENT . IDENTIFIER DELIM_LPAREN DELIM_RPAREN DELIM_LSHIFT statement_list DELIM_RSHIFT

    IDENTIFIER  shift, and go to state 98


state 33

   64 primary_expression: FSM_CURRENT .

    $default  reduce using rule 64 (primary_expression)


state 34

  135 fsm_declaration: FSM_TRANSITION . IDENTIFIER WHEN_KW condition DELIM_SEMICOLON

    IDENTIFIER  shift, and go to state 99


state 35

  118 persona_declaration: CLASS_PERSONA . IDENTIFIER DELIM_LSHIFT persona_body DELIM_RSHIFT
  119                    | CLASS_PERSONA . IDENTIFIER CLASS_INHERIT IDENTIFIER DELIM_LSHIFT persona_body DELIM_RSHIFT

    IDENTIFIER  shift, and go to state 100


state 36

   81 math_function: MATH_ABS . DELIM_LPAREN expression DELIM_RPAREN

    DELIM_LPAREN  shift, and go to state 101


state 37

   82 math_function: MATH_SQRT . DELIM_LPAREN expression DELIM_RPAREN

    DELIM_LPAREN  shift, and go to state 102


state 38

   83 math_function: MATH_CEIL . DELIM_LPAREN expression DELIM_RPAREN

    DELIM_LPAREN  shift, and go to state 103


state 39

   84 math_function: MATH_FLOOR . DELIM_LPAREN expression DELIM_RPAREN

    DELIM_LPAREN  shift, and go to state 104


state 40

   87 math_function: MATH_DIFF . DELIM_LPAREN expression DELIM_COMMA expression DELIM_RPAREN

    DELIM_LPAREN  shift, and go to state 105


state 41

   85 math_function: MATH_NORM . DELIM_LPAREN expression DELIM_RPAREN

    DELIM_LPAREN  shift, and go to state 106


state 42

   86 math_function: MATH_POW . DELIM_LPAREN expression DELIM_COMMA expression DELIM_RPAREN

    DELIM_LPAREN  shift, and go to state 107


state 43

   75 math_function: MATH_SIN . DELIM_LPAREN expression DELIM_RPAREN

    DELIM_LPAREN  shift, and go to state 108


state 44

   76 math_function: MATH_COS . DELIM_LPAREN expression DELIM_RPAREN

    DELIM_LPAREN  shift, and go to state 109


state 45

   77 math_function: MATH_TAN . DELIM_LPAREN expression DELIM_RPAREN

    DELIM_LPAREN  shift, and go to state 110


state 46

   78 math_function: MATH_ASIN . DELIM_LPAREN expression DELIM_RPAREN

    DELIM_LPAREN  shift, and go to state 111


state 47

   79 math_function: MATH_ACOS . DELIM_LPAREN expression DELIM_RPAREN

    DELIM_LPAREN  shift, and go to state 112


state 48

   80 math_function: MATH_ATAN . DELIM_LPAREN expression DELIM_RPAREN

    DELIM_LPAREN  shift, and go to state 113


state 49

   48 expression: OP_INC . IDENTIFIER

    IDENTIFIER  shift, and go to state 114


state 50

   49 expression: OP_DEC . IDENTIFIER

    IDENTIFIER  shift, and go to state 115


state 51

   62 primary_expression: DELIM_LPAREN . expression DELIM_RPAREN

    FUNC_CALL     shift, and go to state 24
    FSM_CURRENT   shift, and go to state 33
    MATH_ABS      shift, and go to state 36
    MATH_SQRT     shift, and go to state 37
    MATH_CEIL     shift, and go to state 38
    MATH_FLOOR    shift, and go to state 39
    MATH_DIFF     shift, and go to state 40
    MATH_NORM     shift, and go to state 41
    MATH_POW      shift, and go to state 42
    MATH_SIN      shift, and go to state 43
    MATH_COS      shift, and go to state 44
    MATH_TAN      shift, and go to state 45
    MATH_ASIN     shift, and go to state 46
    MATH_ACOS     shift, and go to state 47
    MATH_ATAN     shift, and go to state 48
    OP_INC        shift, and go to state 49
    OP_DEC        shift, and go to state 50
    DELIM_LPAREN  shift, and go to state 51
    LIT_STRING    shift, and go to state 52
    LIT_INT       shift, and go to state 53
    LIT_FLOAT     shift, and go to state 54
    LIT_BOOL      shift, and go to state 55
    IDENTIFIER    shift, and go to state 56

    expression          go to state 116
    primary_expression  go to state 66
    math_function       go to state 68


state 52

   60 primary_expression: LIT_STRING .

    $default  reduce using rule 60 (primary_expression)


state 53

   58 primary_expression: LIT_INT .

    $default  reduce using rule 58 (primary_expression)


state 54

   59 primary_expression: LIT_FLOAT .

    $default  reduce using rule 59 (primary_expression)


state 55

   61 primary_expression: LIT_BOOL .

    $default  reduce using rule 61 (primary_expression)


state 56

   50 primary_expression: IDENTIFIER .
   51                   | IDENTIFIER . OP_INC
   52                   | IDENTIFIER . OP_DEC
   53                   | IDENTIFIER . DELIM_DOT IDENTIFIER
   54                   | IDENTIFIER . DELIM_LPAREN argument_list DELIM_RPAREN
   55                   | IDENTIFIER . DELIM_LPAREN DELIM_RPAREN

    OP_INC        shift, and go to state 117
    OP_DEC        shift, and go to state 118
    DELIM_LPAREN  shift, and go to state 119
    DELIM_DOT     shift, and go to state 120

    $default  reduce using rule 50 (primary_expression)


state 57

    1 program: PROGRAM_MIND IDENTIFIER PROGRAM_AWAKE program_body . PROGRAM_SLEEP

    PROGRAM_SLEEP  shift, and go to state 121


state 58

    3 program_body: statement_list .
    5 statement_list: statement_list . statement
